packages/kyvernoPolicies/chart/tests/mpol/update-image-registry-cel/kyverno-test/patched.yaml
apiVersion: v1
kind: Pod
metadata:
  name: registry-pod
  namespace: default
spec:
  containers:
    - name: test
      image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal:9.7
  initContainers:
    - name: init
      image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal:9.7
  ephemeralContainers:
    - name: debug
      image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal:9.7
      targetContainerName: test
---
apiVersion: v1
kind: Pod
metadata:
  name: untouched-pod
  namespace: default
spec:
  containers:
    - name: test
      image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal:9.7
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry-deployment
  namespace: default
spec:
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: test
          image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal:9.7
