packages/kyvernoPolicies/chart/tests/mpol/update-image-registry-cel/kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: update-image-registry-cel
policies:
- ../policy.yaml
resources:
- resource.yaml
results:
- policy: update-image-registry-cel
  resources:
  - registry-pod
  - untouched-pod
  patchedResources: patched.yaml
  kind: Pod
  result: pass
- policy: update-image-registry-cel
  resources:
  - registry-deployment
  patchedResources: patched.yaml
  kind: Deployment
  result: pass
